# ckdl-rb

./: .gitignore  .gitmodules  Gemfile  README.md  Rakefile  ckdl.gemspec
.github/workflows/: main.yml
ext/: CMakeLists.txt  Makefile  ckdl.c  ckdl.h  extconf.rb
ext/ckdl/: ckdl.c  ckdl.h  extconf.rb
lib/: ckdl.rb
lib/ckdl/: emitter.rb  parser.rb  version.rb
sig/: ckdl.rbs
test/: test_ckdl.rb  test_helper.rb  test_v1.rb  test_v2.rb
